feat: update style for diagram

--- a/CEDT-Homework-style.sty
+++ b/CEDT-Homework-style.sty
@@ -8,6 +8,7 @@
 \RequirePackage{enumitem} % Custom lists
 \RequirePackage{hyperref} % Clickable references
 \RequirePackage{tikz} % For possible future diagrams
+\RequirePackage{pgfplots}
 \RequirePackage{xcolor} % Color support
 
 
@@ -22,6 +23,9 @@
 \usepackage{mdframed}
 \usepackage{booktabs}
 \usepackage[most]{tcolorbox}
+
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 
 \usepackage{amsmath}
 \allowdisplaybreaks
