--- a/discrete-rv-excercise/main.tex
+++ b/discrete-rv-excercise/main.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \subject[2110205 - Statistics for Computer Engineering]
-\hwtitle{4.5}{Week 4-5}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
+\hwtitle{}{Discrete Random Variables Exercises}{Midterm Preparation}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
 
 \noindent This file contains \underline{120 problems} on discrete random variables provided by the professor.
 You can use this file to practice and assess your understanding of discrete random variables.
