--- a/homework-04/main.tex
+++ b/homework-04/main.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 \subject[2110205 - Statistics for Computer Engineering]
-\hwtitle{4}{Week 4}{6733172621 Patthadon Phengpinij}{ChatGPT (for LaTeX styling and grammar checking)}
+\hwtitle{4}{}{Week 4}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
 
 
 % ================================================================================ %
