--- a/homework-05/main.tex
+++ b/homework-05/main.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \subject[2110205 - Statistics for Computer Engineering]
-\hwtitle{5}{Week 6}{6733172621 Patthadon Phengpinij}{ChatGPT (for LaTeX styling and grammar checking)}
+\hwtitle{5}{}{Week 6}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
 
 
 % ================================================================================ %
