--- a/templates/homework-template.tex
+++ b/templates/homework-template.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \subject[COURSE NAME]
-\hwtitle{X}{Week x - x}{AUTHOR}{ChatGPT}
+\hwtitle{X}{}{Week x - x}{AUTHOR}{ChatGPT}
 
 
 % ================================================================================ %
