--- a/homework-02/main.tex
+++ b/homework-02/main.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \subject[2110205 - Statistics for Computer Engineering]
-\hwtitle{2}{Week 1 - 2}{6733172621 Patthadon Phengpinij}{ChatGPT (for LaTeX styling and grammar checking)}
+\hwtitle{2}{}{Week 1 - 2}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
 
 
 % ================================================================================ %
