--- a/homework-03/main.tex
+++ b/homework-03/main.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 \subject[2110205 - Statistics for Computer Engineering]
-\hwtitle{3}{Week 3}{6733172621 Patthadon Phengpinij}{ChatGPT (for LaTeX styling and grammar checking)}
+\hwtitle{3}{}{Week 3}{6733172621 Patthadon Phengpinij}{ChatGPT (for\,\LaTeX\,styling and grammar checking)}
 
 
 % ================================================================================ %
